update 放行 短信登录 与 小程序登录 接口

--- a/config/dev/ruoyi-gateway.yml
+++ b/config/dev/ruoyi-gateway.yml
@@ -23,6 +23,8 @@ security:
       - /code
       - /auth/logout
       - /auth/login
+      - /auth/smsLogin
+      - /auth/xcxLogin
       - /auth/register
       - /*/v2/api-docs
       - /csrf
