全面升级适配 SpringCloudAlibaba 2021.0.1.0 配置方式大更改 nacos client 降级 2.0.2 高于此版本会有问题 不影响nacos服务端版本 nacos 配置文件 application.yml 重命名为 application-common.yml 解决命名冲突问题

--- a/ruoyi-common/ruoyi-common-job/pom.xml
+++ b/ruoyi-common/ruoyi-common-job/pom.xml
@@ -16,6 +16,12 @@
     </description>
 
 	<dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+
         <!-- xxl-job-core -->
         <dependency>
             <groupId>com.xuxueli</groupId>
@@ -26,6 +32,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
 
     </dependencies>
 </project>
