--- a/ruoyi-modules/ruoyi-job/src/main/resources/application.yml
+++ b/ruoyi-modules/ruoyi-job/src/main/resources/application.yml
@@ -1,15 +1,12 @@
 # Tomcat
 server:
-  port: 18000
+  port: 9203
 
 # Spring
 spring:
-  main:
-    # 此配置禁止放入 nacos 优先级不够
-    allow-circular-references: true
   application:
     # 应用名称
-    name: ruoyi-doc
+    name: ruoyi-job
   profiles:
     # 环境配置
     active: @profiles.active@
@@ -28,9 +25,8 @@ spring:
         # 配置组
         group: @nacos.config.group@
         namespace: ${spring.profiles.active}
-        # 配置文件格式
-        file-extension: yml
-        # 共享配置
-        shared-configs:
-          - data-id: application.${spring.cloud.nacos.config.file-extension}
-            refresh: true
+  config:
+    import:
+      - optional:nacos:application-common.yml
+      - optional:nacos:datasource.yml
+      - optional:nacos:${spring.application.name}.yml
