--- a/ruoyi-auth/src/main/resources/application.yml
+++ b/ruoyi-auth/src/main/resources/application.yml
@@ -4,9 +4,6 @@ server:
 
 # Spring
 spring:
-  main:
-    # 此配置禁止放入 nacos 优先级不够
-    allow-circular-references: true
   application:
     # 应用名称
     name: ruoyi-auth
@@ -28,9 +25,7 @@ spring:
         # 配置组
         group: @nacos.config.group@
         namespace: ${spring.profiles.active}
-        # 配置文件格式
-        file-extension: yml
-        # 共享配置
-        shared-configs:
-          - data-id: application.${spring.cloud.nacos.config.file-extension}
-            refresh: true
+  config:
+    import:
+      - optional:nacos:application-common.yml
+      - optional:nacos:${spring.application.name}.yml
