--- a/ruoyi-gateway/src/main/resources/application.yml
+++ b/ruoyi-gateway/src/main/resources/application.yml
@@ -1,15 +1,14 @@
 # Tomcat
 server:
-  port: 9300
+  port: 8080
+  servlet:
+    context-path: /
 
 # Spring
 spring:
-  main:
-    # 此配置禁止放入 nacos 优先级不够
-    allow-circular-references: true
   application:
     # 应用名称
-    name: ruoyi-resource
+    name: ruoyi-gateway
   profiles:
     # 环境配置
     active: @profiles.active@
@@ -28,11 +27,7 @@ spring:
         # 配置组
         group: @nacos.config.group@
         namespace: ${spring.profiles.active}
-        # 配置文件格式
-        file-extension: yml
-        # 共享配置
-        shared-configs:
-          - data-id: application.${spring.cloud.nacos.config.file-extension}
-            refresh: true
-          - data-id: datasource.${spring.cloud.nacos.config.file-extension}
-            refresh: true
+  config:
+    import:
+      - optional:nacos:application-common.yml
+      - optional:nacos:${spring.application.name}.yml
