--- a/ruoyi-modules/ruoyi-gen/src/main/resources/application.yml
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/application.yml
@@ -4,9 +4,6 @@ server:
 
 # Spring
 spring:
-  main:
-    # 此配置禁止放入 nacos 优先级不够
-    allow-circular-references: true
   application:
     # 应用名称
     name: ruoyi-gen
@@ -28,11 +25,8 @@ spring:
         # 配置组
         group: @nacos.config.group@
         namespace: ${spring.profiles.active}
-        # 配置文件格式
-        file-extension: yml
-        # 共享配置
-        shared-configs:
-          - data-id: application.${spring.cloud.nacos.config.file-extension}
-            refresh: true
-          - data-id: datasource.${spring.cloud.nacos.config.file-extension}
-            refresh: true
+  config:
+    import:
+      - optional:nacos:application-common.yml
+      - optional:nacos:datasource.yml
+      - optional:nacos:${spring.application.name}.yml
