--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
         <knife4j.version>3.0.3</knife4j.version>
         <satoken.version>1.29.0</satoken.version>
 
+        <!-- 统一 guava 版本 解决隐式漏洞问题 -->
+        <guava.version>30.0-jre</guava.version>
+
         <!-- OSS 配置 -->
         <qiniu.version>7.9.5</qiniu.version>
         <aliyun.oss.version>3.14.0</aliyun.oss.version>
@@ -249,6 +252,13 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
                 <version>${okhttp.version}</version>
+            </dependency>
+
+            <!-- 统一 guava 版本 解决隐式漏洞问题 -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
 
         </dependencies>
