--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -27,6 +27,7 @@
         <module>ruoyi-common-loadbalancer</module>
         <module>ruoyi-common-oss</module>
         <module>ruoyi-common-idempotent</module>
+        <module>ruoyi-common-mail</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
