--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -28,6 +28,7 @@
         <module>ruoyi-common-oss</module>
         <module>ruoyi-common-idempotent</module>
         <module>ruoyi-common-mail</module>
+        <module>ruoyi-common-sms</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
