add 增加 验证码短信发送接口 与 完善短信登录逻辑

--- a/config/dev/ruoyi-gateway.yml
+++ b/config/dev/ruoyi-gateway.yml
@@ -26,6 +26,7 @@ security:
       - /auth/smsLogin
       - /auth/xcxLogin
       - /auth/register
+      - /resource/sms/code
       - /*/v2/api-docs
       - /csrf
 
