--- a/pom.xml
+++ b/pom.xml
@@ -19,35 +19,30 @@
         <java.version>1.8</java.version>
         <spring-boot.version>2.6.7</spring-boot.version>
         <spring-cloud.version>2021.0.2</spring-cloud.version>
-        <alibaba.nacos.version>2.0.4</alibaba.nacos.version>
-        <spring-boot-admin.version>2.6.6</spring-boot-admin.version>
+        <spring-boot-admin.version>2.6.7</spring-boot-admin.version>
         <spring-boot.mybatis>2.2.2</spring-boot.mybatis>
         <swagger.core.version>1.5.22</swagger.core.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
         <p6spy.version>3.9.1</p6spy.version>
-        <druid.version>1.2.8</druid.version>
+        <druid.version>1.2.9</druid.version>
         <dynamic-ds.version>3.5.1</dynamic-ds.version>
         <velocity.version>2.3</velocity.version>
         <poi.version>4.1.2</poi.version>
         <commons-compress.version>1.21</commons-compress.version>
         <easyexcel.version>3.0.5</easyexcel.version>
-        <cglib.version>3.3.0</cglib.version>
-        <hutool.version>5.7.22</hutool.version>
+        <hutool.version>5.8.0</hutool.version>
         <redisson.version>3.17.0</redisson.version>
         <lock4j.version>2.2.1</lock4j.version>
         <xxl-job.version>2.3.0</xxl-job.version>
         <knife4j-aggregation.version>2.0.9</knife4j-aggregation.version>
         <knife4j.version>3.0.3</knife4j.version>
-        <satoken.version>1.29.0</satoken.version>
+        <satoken.version>1.30.0</satoken.version>
 
         <!-- 统一 guava 版本 解决隐式漏洞问题 -->
         <guava.version>30.0-jre</guava.version>
 
         <!-- OSS 配置 -->
-        <qiniu.version>7.9.5</qiniu.version>
-        <aliyun.oss.version>3.14.0</aliyun.oss.version>
-        <qcloud.cos.version>5.6.72</qcloud.cos.version>
-        <minio.version>8.3.8</minio.version>
+        <aws-java-sdk-s3.version>1.12.215</aws-java-sdk-s3.version>
         <okhttp.version>4.9.3</okhttp.version>
 
         <!-- SMS 配置 -->
@@ -250,6 +245,12 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
                 <version>${okhttp.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk-s3</artifactId>
+                <version>${aws-java-sdk-s3.version}</version>
             </dependency>
 
             <dependency>
