update 增加 redis 无密码使用说明

--- a/config/dev/application-common.yml
+++ b/config/dev/application-common.yml
@@ -101,7 +101,8 @@ spring:
   redis:
     host: localhost
     port: 6379
-    password:
+    # 密码(如没有密码请注释掉)
+    # password:
     database: 0
     timeout: 10s
     ssl: false
