add 增加 全局日志 过滤器

--- a/config/dev/ruoyi-gateway.yml
+++ b/config/dev/ruoyi-gateway.yml
@@ -34,6 +34,8 @@ spring:
   cloud:
     # 网关配置
     gateway:
+      # 打印请求日志(自定义)
+      requestLog: true
       discovery:
         locator:
           lowerCaseServiceId: true
