--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <dynamic-ds.version>3.5.1</dynamic-ds.version>
         <velocity.version>2.3</velocity.version>
         <fastjson.version>1.2.83</fastjson.version>
-        <commons-compress.version>1.21</commons-compress.version>
+        <poi.version>5.2.2</poi.version>
         <easyexcel.version>3.1.0</easyexcel.version>
         <hutool.version>5.8.2</hutool.version>
         <redisson.version>3.17.2</redisson.version>
@@ -184,17 +184,26 @@
                 <version>${p6spy.version}</version>
             </dependency>
 
-            <!-- 修复poi漏洞 -->
             <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-compress</artifactId>
-                <version>${commons-compress.version}</version>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>easyexcel</artifactId>
                 <version>${easyexcel.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.poi</groupId>
+                        <artifactId>poi-ooxml-schemas</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- 代码生成使用模板 -->
