update 优化 ruoyi-common-mybatis 针对 dubbo 依赖改为外部导入

--- a/ruoyi-common/ruoyi-common-mybatis/pom.xml
+++ b/ruoyi-common/ruoyi-common-mybatis/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common-dubbo</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
