--- a/pom.xml
+++ b/pom.xml
@@ -281,6 +281,7 @@
         <module>ruoyi-modules</module>
         <module>ruoyi-api</module>
         <module>ruoyi-common</module>
+        <module>ruoyi-example</module>
     </modules>
     <packaging>pom</packaging>
 
