--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <spring-cloud.version>2021.0.3</spring-cloud.version>
         <spring-boot-admin.version>2.6.7</spring-boot-admin.version>
         <spring-boot.mybatis>2.2.2</spring-boot.mybatis>
+        <mybatis.version>3.5.10</mybatis.version>
         <swagger.core.version>1.5.22</swagger.core.version>
         <mybatis-plus.version>3.5.2</mybatis-plus.version>
         <p6spy.version>3.9.1</p6spy.version>
@@ -151,6 +152,12 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${spring-boot.mybatis}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
             </dependency>
 
             <dependency>
