--- a/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
+++ b/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
@@ -64,6 +64,12 @@
             </exclusions>
         </dependency>
 
+        <!-- starter-actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
