--- a/pom.xml
+++ b/pom.xml
@@ -344,6 +344,7 @@
                 <includes>
                     <include>application*</include>
                     <include>bootstrap*</include>
+                    <include>logback*</include>
                 </includes>
                 <!-- 启用过滤 即该资源中的变量将会被过滤器中的值替换 -->
                 <filtering>true</filtering>
