update 更新 演示案例 接口文档地址 与 读取演示需要的配置

--- a/ruoyi-example/ruoyi-demo/src/main/resources/application.yml
+++ b/ruoyi-example/ruoyi-demo/src/main/resources/application.yml
@@ -28,6 +28,7 @@ spring:
   config:
     import:
       - optional:nacos:application-common.yml
+      - optional:nacos:ruoyi-resource.yml
       - optional:nacos:datasource.yml
 
 --- # 数据源设置 需在 system 数据源下 执行 test.sql 文件
