--- a/config/dev/application-common.yml
+++ b/config/dev/application-common.yml
@@ -39,6 +39,8 @@ dubbo:
   registry:
     address: nacos://${spring.cloud.nacos.server-addr}
     group: DUBBO_GROUP
+    parameters:
+      namespace: ${spring.profiles.active}
   # 消费者相关配置
   consumer:
     # 结果缓存(LRU算法)
