update 优化 nginx 限制外网访问内网 actuator 相关路径

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -55,6 +55,11 @@ http {
         #     return 200 '{"msg":"演示模式，不允许操作","code":500}';
         # }
 
+        # 限制外网访问内网 actuator 相关路径
+        location ~ ^(/[^/]*)?/actuator(/.*)?$ {
+            return 403;
+        }
+
         location / {
             root   /usr/share/nginx/html;
             try_files $uri $uri/ /index.html;
