--- a/config/dev/seata-server.properties
+++ b/config/dev/seata-server.properties
@@ -3,6 +3,7 @@ service.vgroupMapping.ruoyi-system-group=default
 service.vgroupMapping.ruoyi-resource-group=default
 service.vgroupMapping.ruoyi-gen-group=default
 service.vgroupMapping.ruoyi-job-group=default
+service.vgroupMapping.ruoyi-demo-group=default
 
 service.enableDegrade=false
 service.disableGlobalTransaction=false
