--- a/ruoyi-example/ruoyi-demo/src/main/resources/application.yml
+++ b/ruoyi-example/ruoyi-demo/src/main/resources/application.yml
@@ -35,6 +35,7 @@ spring:
 spring:
   datasource:
     dynamic:
+      seata: false
       # 设置默认的数据源或者数据源组,默认值即为 master
       primary: master
       datasource:
