--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -73,6 +73,12 @@
 <!--            <artifactId>ruoyi-common-loadbalancer</artifactId>-->
 <!--        </dependency>-->
 
+        <!-- ELK 日志收集 -->
+<!--        <dependency>-->
+<!--            <groupId>com.ruoyi</groupId>-->
+<!--            <artifactId>ruoyi-common-logstash</artifactId>-->
+<!--        </dependency>-->
+
     </dependencies>
 
     <build>
