--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -29,6 +29,7 @@
         <module>ruoyi-common-idempotent</module>
         <module>ruoyi-common-mail</module>
         <module>ruoyi-common-sms</module>
+        <module>ruoyi-common-logstash</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
