--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -269,7 +269,7 @@ services:
 
   elasticsearch:
     image: elasticsearch:7.17.2
-    container_name: elk_elasticsearch
+    container_name: elasticsearch
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -282,32 +282,34 @@ services:
     volumes:
       - /docker/elk/elasticsearch/plugins:/usr/share/elasticsearch/plugins
       - /docker/elk/elasticsearch/data:/usr/share/elasticsearch/data
+      - /docker/elk/elasticsearch/logs:/usr/share/elasticsearch/logs
     network_mode: "host"
 
   kibana:
     image: kibana:7.17.2
-    container_name: elk_kibana
+    container_name: kibana
     ports:
       - "5601:5601"
     depends_on:
       # kibana在elasticsearch启动之后再启动
       - elasticsearch
     environment:
-      # 设置访问elasticsearch的地址
-      ELASTICSEARCH_URL: http://127.0.0.1:9200
       #设置系统语言文中文
       I18N_LOCALE: zh-CN
       # 访问域名
       # SERVER_PUBLICBASEURL: https://kibana.cloud.com
+    volumes:
+      - /docker/elk/kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml
     network_mode: "host"
 
   logstash:
     image: logstash:7.17.2
-    container_name: elk_logstash
+    container_name: logstash
     ports:
       - "4560:4560"
     volumes:
-      - /docker/elk/logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - /docker/elk/logstash/pipeline/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - /docker/elk/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml
     depends_on:
       - elasticsearch
     network_mode: "host"
