!33 add 新增 ruoyi-stream-mq 演示模块 完成 RabbitMQ RocketMQ Kafka 整合 add 新增 ruoyi-stream-mq 演示模块 完成 RabbitMQ RocketMQ Kafka 整合

--- a/config/dev/ruoyi-gateway.yml
+++ b/config/dev/ruoyi-gateway.yml
@@ -78,6 +78,13 @@ spring:
             - Path=/demo/**
           filters:
             - StripPrefix=1
+        # MQ演示服务
+        - id: ruoyi-stream-mq
+          uri: lb://ruoyi-stream-mq
+          predicates:
+            - Path=/stream-mq/**
+          filters:
+            - StripPrefix=1
 
     # sentinel 配置
     sentinel:
