--- a/ruoyi-example/pom.xml
+++ b/ruoyi-example/pom.xml
@@ -10,6 +10,7 @@
 
     <modules>
         <module>ruoyi-demo</module>
+        <module>ruoyi-stream-mq</module>
     </modules>
 
     <artifactId>ruoyi-example</artifactId>
