--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -16,6 +16,7 @@
         <module>ruoyi-common-excel</module>
         <module>ruoyi-common-core</module>
         <module>ruoyi-common-redis</module>
+        <module>ruoyi-common-doc</module>
         <module>ruoyi-common-security</module>
         <module>ruoyi-common-satoken</module>
         <module>ruoyi-common-web</module>
