--- a/ruoyi-example/ruoyi-stream-mq/pom.xml
+++ b/ruoyi-example/ruoyi-stream-mq/pom.xml
@@ -63,6 +63,11 @@
 
         <dependency>
             <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-doc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common-web</artifactId>
         </dependency>
 
