update 优化 默认使用服务名去除前缀当Path 支持自定义Path

--- a/config/dev/application-common.yml
+++ b/config/dev/application-common.yml
@@ -257,6 +257,10 @@ swagger:
         type: APIKEY
         in: HEADER
         name: ${sa-token.token-name}
+  # 服务文档路径映射 参考 gateway router 配置
+  # 默认为服务名去除前缀转换为path 此处填特殊的配置
+  service-mapping:
+    ruoyi-gen: /code
 
 # seata配置
 seata:
