add 新增 ruoyi-common-elasticsearch 模块 集成 easy-es 操作搜索引擎

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -30,6 +30,7 @@
         <module>ruoyi-common-mail</module>
         <module>ruoyi-common-sms</module>
         <module>ruoyi-common-logstash</module>
+        <module>ruoyi-common-elasticsearch</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
