add 增加 搜索引擎 crud 演示案例

--- a/ruoyi-example/ruoyi-demo/pom.xml
+++ b/ruoyi-example/ruoyi-demo/pom.xml
@@ -93,6 +93,10 @@
 <!--            <artifactId>tencentcloud-sdk-java</artifactId>-->
 <!--        </dependency>-->
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-elasticsearch</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
