update 修复 docker-compose启动monitor失败问题

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -144,7 +144,7 @@ services:
     restart: always
     network_mode: "host"
 
-  ruoyi-monitor-admin:
+  ruoyi-monitor:
     image: ruoyi/ruoyi-monitor:1.2.0
     container_name: ruoyi-monitor
     environment:
