fix 修复 sentinel 构建无法读取webapp目录问题

--- a/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
+++ b/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
@@ -117,6 +117,15 @@
                 <artifactId>docker-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/webapp/</directory>
+            </resource>
+        </resources>
     </build>
 
 </project>
